--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+body {
+  font-family: 'Rambla', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Rambla', sans-serif;
+}
+
 #gameboard {
   display: none;
 }
