--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ h1 {
   font-family: 'Saira Extra Condensed', sans-serif;
   text-transform: uppercase;    
   background-color: #7A8CF6;
-  font-size: 2em;
+  font-size: 1.75em;
   border-radius: 15px;
 }
 
@@ -28,12 +28,16 @@ h1 {
 }
 
 #logo {
-  max-height: 150px;
+  max-height: 100px;
 }
 
 #timer {
   background-color: #AAA511;
   font-size: 3em;
+}
+
+#feedback img {
+  border-radius: 15px;
 }
 
 #gameboard {
@@ -42,6 +46,7 @@ h1 {
 
 #question {
   font-weight: bold;  
+  margin-top: 5.5vh;
 }
 
 #question img {
